Adjusted memory settings for tests (as JaCoCo starts multiple processes, each with potentially large memory usage, and this causes issues for Circle CI)